<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/Sand"
                tools:context=".MainActivity">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:textColor="@android:color/black"
        android:id="@+id/Title"
        android:layout_marginTop="12dp"
        android:layout_margin="12dp"
        android:textIsSelectable="true"/>

    <Button
        android:text="@string/btnMovies1"
        android:id="@+id/buttonMovies1"
        android:onClick="buttonShowToast"
        style="@style/AppLaunchButton"
        />

    <Button
        android:text="@string/btnMovies2"
        android:id="@+id/buttonMovies2"
        android:onClick="buttonShowToast"
        style="@style/AppLaunchButton"
        />

    <Button
        android:text="@string/btnScores"
        android:id="@+id/buttonScoresApp"
        android:onClick="buttonShowToast"
        style="@style/AppLaunchButton"
        />

    <Button
        android:text="@string/btnLibrary"
        android:id="@+id/buttonLibrary"
        android:onClick="buttonShowToast"
        style="@style/AppLaunchButton"
        />

    <Button
        style="@style/AppLaunchButton"
        android:text="@string/btnBuildBigger"
        android:id="@+id/buttonBuildBigger"
        android:onClick="buttonShowToast"
        />

    <Button
        android:text="@string/btnXYZ"
        android:id="@+id/buttonXYZReader"
        android:onClick="buttonShowToast"
        style="@style/AppLaunchButton"
        />

    <Button
        android:text="@string/btnCapstone"
        android:id="@+id/buttonCapstone"
        android:onClick="buttonShowToast"
        style="@style/AppLaunchButton"
        android:centerColor="@color/Turquoise"
        />
</LinearLayout>
</RelativeLayout>
